@@ -12,6 +12,7 @@ Version TBD
 * Don't install tests.tabular_output.
 * Add .gitignore
 * Coverage for tox tests.
+* Fix issue where tabulate can't handle ANSI escape codes in default values.
 
 
 Version 0.1.0
